--- a/index.html
+++ b/index.html
@@ -1,13 +1,89 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="description" content="Dit is een cursus over HTML"> <!-- max 160 karakters-->
+    <meta name="keywords" content="html, cursus, html cursus, tags, meta tags, headings"> <!-- minimaal 5 en max 13 keer-->
+    <meta name="author" content="Anik P">
+    <meta name="robots" content="index,follow">
+    <!-- het onderste om iets te kunnen delen met anderen-->
+    <meta property="og:title" content="voorbeeld webpagina">
+    <meta property="og:description" content="Dit is een cursus over HTML">
+    <meta property="og:image" content="http///images/test.jpg">
+    <meta property="twitter:title" content="voorbeeld webpagina">
+    <meta property="twitter:description" content="Dit is een cursus over HTML">
+    <meta property="twitter:image" content="http///images/test.jpg">
+    <title>HTML</title>
+
 </head>
 <body>
+<h1>HTML Cursus</h1>
+    <p>Intro over HTML en CSS</p>
+    <h2>headings</h2>
+        <p>Dit gaat over de headings h1 tot h2</p>
+        <h3>tags</h3>
+            <h4>p tag</h4>
+                <p>Een p tag is standaard 16px groot</p>
+            <h4>blok level vs inline elements</h4>
+                <p>blok level is stacked (op elkaar)</p>
+                <p>inline element: naast elkaar</p>
+            <h4>lists: ol en ul</h4>
+                <p>ol:order list en  ul:unordered list</p>
+                <h5>ol</h5>
+                    <ol>
+                        <li>first item</li>
+                        <li>second item</li>
+                        <li>third item</li>
+                    </ol>
+                <h5>ul</h5>
+                    <ul>
+                        <li>first item</li>
+                        <li>second item</li>
+                        <li>third item</li>
+                    </ul>
+            <h4>uitdrukking</h4>
+            <blockquote>Geniale mensen zijn zelden ordelijk, orderlijker, zelden geniaal</blockquote>
+            <pre>de pre tag        zal iets doen!</pre>
+            <p>de pre tag      zal geen spaties tonen</p>
+            <abbr title="HyperText Markup Language">HTML</abbr>
+<!-- verschil tussen de twee, de strong tag zal nadruk leggen op de woord als het gelezen word-->
+            <b>vet</b>
+            <strong>Vet</strong>
+            <br>
+<!--3 manieren om italic te schrijven-->
+            <i>Italic</i>
+            <em>Italic</em>
+            <var>myVar</var>
+            <br>
+            <u>Underline</u>
+            <mark>Underline</mark>
+            <br>
+            <code>const x=5;</code>
+            <kbd>CTRL+D</kbd><p>zorgt voor een kopie</p>
+            <abbr title="zorgt voor een kopie van een lijn in PHPstorm"> <kbd>CTRL+D</kbd> </abbr>
+            <samp>output of code</samp>
+            <br>
+<!--target="_blank" zorgt ervoor dat de link op een apparte tap geopened word -->
+            <a href="https://www.syntrawest.be" target="_blank" title="website van syntrawest">SW</a>
+            <br>
+            <bdo dir="rtl">moordnilap nee si lepel</bdo>
+            <br>
+            <sub>sub tag</sub>
+            <sup>sub tag</sup>
+            <small>small tag</small>
+            <small><q>small tag tussen aanhalingstekens</q></small>
+            <address>
+                Adress:straat
+                Postcode:
+                Plaats:
+            </address>
+            <dfn> <abbr title="hypertext ..."> HTML </abbr> </dfn> is de taal van een website
+
+            <h4>CONTAINER TAGS</h4>
+<script src="js/index.js"></script>
 
 </body>
 </html>
