wijzigingen oefeningen html 1

--- a/projecten/blueasy2/index.html
+++ b/projecten/blueasy2/index.html
@@ -112,15 +112,29 @@
         </div>
 
     </section>
-    <div id="videowrapper" class="d-flex">
-        <section id="video">
-            <h3>
-                JUST DEFAULT SECTION
-            </h3>
-            <article></article>
-            <article></article>
-        </section>
-    </div>
+    <section id="video">
+        <div id="videowrapper" >
+            <article class="d-flex">
+                <div id="videotext">
+                    <h3>
+                        JUST DEFAULT SECTION
+                    </h3>
+                        <p id="topp">
+                            Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.
+                        </p>
+                        <p id="bottomp">
+                            Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.
+                        </p>
+                    <div id="whiteline"></div>
+                </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/DAOZJPquY_w?si=CmywSjU4ZmuDy7Er"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+            </article>
+            </div>
+        </div>
+    </section>
 </main>
 
 <footer>
